--- a/src/app/client/squarefeet/squarefeet.component.css
+++ b/src/app/client/squarefeet/squarefeet.component.css
@@ -2,14 +2,20 @@
     border: 2px solid;
 }
 
+
 h4{
-    color:#fff; 
-}
-p{
     color:#f1875b;
-    font-size: 1.5rem;
+    
+}
+h5{
+    color:#d5d5d5;
 }
 .btn1{
     background-color: #f1875b;
     color: #fff;
+}   
+
+.btn1:hover{
+    background-color: #D5D5D5;
+    color:#000;
 }
