--- a/src/app/client/squarefeet/squarefeet.component.html
+++ b/src/app/client/squarefeet/squarefeet.component.html
@@ -1,60 +1,63 @@
-<div class="row mb-5">
+<app-navbar></app-navbar>
+<div class="row">
   <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-    <div class="col-md-12 p-2 ">
-          <h4 class="text-center p-3">New Order > First Unit</h4>
-          <p class="text-center p-3">Property Size </p>
+    <div class="col-md-12">
+          <h3 class="text-center text-white">New Order > First Unit</h3>
+          <h4 class="text-center">Property Size </h4>
         </div>
         <div class="row">
           <div class="col-md-4 col-4 text-left">
-              <h4>BACK</h4>
+              <h5 class="text-white">BACK</h5>
           </div>
           <div class="col-md-4 col-4 text-center">
+              <h5>Subtotal:</h5>
             </div>
           <div class="col-md-4 col-4 text-right">
-            <h4>NEXT</h4>
+            <h5 class="text-white">NEXT</h5>
           </div>
         </div>
         </div>
         </div>
-        <div class="row text-center mb-5">
+        <div class="row text-center mb-3">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
             <h3>How many square feet?</h3>
           </div>
         </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block ">0-750 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block">0-750 SF</button>
       </div>
       </div>
       <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block ">751-1500 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block ">751-1500 SF</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block ">2251-3000 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block ">2251-3000 SF</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block">3001-3750 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block">3001-3750 SF</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block">3751-4500 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block">3751-4500 SF</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block">4501-5250 SF </button>
+          <button type="button" class="btn btn1 btn-sm btn-block">4501-5250 SF </button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block">5251+ SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block">5251+ SF</button>
             </div>
             </div>
+            <app-footer></app-footer>
      
     
