--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -3,7 +3,7 @@
   <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
     <div class=" col-md-12">
           <h3 class="text-center text-white">New Order > {{totalunits}} Unit</h3>
-          <h4 class="text-center">{{propertytype}} Address </h4>
+          <h4 class="text-center sp">{{propertytype}} Address </h4>
     </div>
   </div> 
  </div>
