--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -1,11 +1,15 @@
 <app-navbar></app-navbar>
 <div class="row">
   <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-    <div class="col-md-12">
-      <h3 class="text-center text-white">New Order > First Unit</h3>
-      <h4 class="text-center">Pick a Date </h4>
+    <div class="row">
+      <div class="col-md-12">
+        <h3 class="text-center text-white">New Order > First Unit</h3>
+        <h4 class="text-center">Pick a Date </h4>
+      </div>
     </div>
+   
   </div> 
+</div>  
   <form class="row" #visitingdatefg="ngForm" (ngSubmit)="Onvisitingsubmit(visitingdatefg)">
     <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
       <div class="row">
