--- a/src/app/client/access/access.component.html
+++ b/src/app/client/access/access.component.html
@@ -24,12 +24,13 @@
     </div>
         
 </div>
-
+</form>
+<div class="row">
 <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-   
-      <h3 class="text-center my-3">How will you access the property?</h3>
+   <h3 class="text-center my-3">How will you access the property?</h3>
         <p class="text-center text-danger">{{message}}</p>
-    
+   </div>
+</div>
      <div class="row">
         <div class="col-xs-12 my-2 py-md-2 offset-md-3 col-md-6 lg-offset-3 col-lg-6">
             <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="meet('Meet agent on site')">Meet agent on site</button>
@@ -41,12 +42,4 @@
             </div>
           </div>  
         </div>
-       </div>
-          
-      
-    
-
-    
-
-  
-  <app-footer></app-footer>
+<app-footer></app-footer>
