--- a/src/app/client/footer/footer.component.html
+++ b/src/app/client/footer/footer.component.html
@@ -22,7 +22,7 @@
       </div>
   
   <div class="col-md-12 text-center" id="view">
-  <span class="rounded-circle mb-4 bg-white"><img src="/assets/image/logo2.png" class="p-2"></span>
+  <span class="rounded-circle mb-4 bg-white"></span>
 </div>
 <div class="menu mb-2 bg-white border border-grey">
   <h3 class="text-center p-3  ">PRICE MENU</h3>
