--- a/src/app/client/login/login.component.css
+++ b/src/app/client/login/login.component.css
@@ -3,10 +3,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
-}
+   }
 .rounded-circle {
-    border-radius: 50%!important;
-    height: 35vh;
+    border-radius: 50% !important;
+    height: 30vh;
 }
 .error
 {
@@ -18,20 +18,32 @@ input{
     opacity: 0.8;
 
 }
+.btn4{
+    background-color:#F1875B;
+    color:#fff;
+    font-size: 1rem;
+    border-radius: 25px;
+}
+.btn5{
+    color: white;
+    background-color:#A1A1A1;
+    border-radius:25px;
+  
+   
+}    
 
    
     @media screen and(max-width:750){
-        .btn1
+        .btn4
   {
     color: white;
     background-color:#F07C49;
-        border-radius:20vh;
+        border-radius:25px;
     }
-    .btn2{
+    .btn5{
         color: white;
         background-color:#A1A1A1;
-        border-radius:20vh;
-        line-height: 4vw;
+        border-radius:25px;
        
     }    
     
